<resources>
    <string name="app_name">がぶ本2</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_first_fragment">Hello First Fragment!</string>
    <string name="hello_second_fragment">Hello Second Fragment!</string>
    <string name="hello_third_fragment">Hello Third Fragment!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_delete">Delete</string>
    <string name="background_color">Background color</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="switch_view">Switch view</string>
    <string name="switch_image">Switch image</string>
    <string name="center">center</string>
    <string name="center_crop">center_crop</string>
    <string name="center_inside">center_inside</string>
    <string name="fit_center">fit_center</string>
    <string name="fit_end">fit_end</string>
    <string name="fit_start">fit_start</string>
    <string name="fit_xy">fit_xy</string>
    <string name="ellipsize_none">none</string>
    <string name="ellipsize_start">start</string>
    <string name="ellipsize_middle">middle</string>
    <string name="ellipsize_end">end</string>
    <string name="long_text">Android（アンドロイド）とは、スマートフォンやタブレットPCなどの携帯情報端末を主なターゲットとして開発されたプラットフォームである。Linuxベースのモバイル用オープンソース・オペレーティングシステム、ミドルウェア、主要なアプリケーションからなるソフトウェアスタック（集合）パッケージで構成されている。</string>
    <string name="hint_text">1行テキスト</string>
    <string name="hint_password">パスワード</string>
    <string name="hint_number">数字のみ</string>
    <string name="hint_phone">電話番号</string>
    <string name="hint_multiline">複数行</string>
    <string name="hint_email">メールアドレス</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear">Clear</string>
    <string name="check_box_a">CheckBox A</string>
    <string name="check_box_b">CheckBox B</string>
    <string name="check_box_c">CheckBox C</string>
    <string name="off_text">効果音オフ</string>
    <string name="on_text">効果音オン</string>
    <string name="to_default">To default</string>
    <string name="calendar_shown">calendarViewShown</string>
    <string name="spinner_shown">spinnersShown</string>
    <string name="date_picker_dialog">DatePickerDialog</string>
    <string name="date_picker_fragment">DatePickerFragment</string>
    <string name="time_picker_dialog">TimePickerDialog</string>
    <string name="time_picker_fragment">TimePickerFragment</string>
    <string name="is_24_hour">is24HourView</string>
    <string name="london_olympics_contries">London Olympics Participating Countries</string>
    <string name="left_top">左上</string>
    <string name="center_top">上</string>
    <string name="right_top">右上</string>
    <string name="left_center">左中</string>
    <string name="gravity_center">中央</string>
    <string name="right_center">右中</string>
    <string name="left_bottom">左下</string>
    <string name="center_bottom">下</string>
    <string name="right_bottom">右下</string>
    <string name="custom">カスタムビュー</string>
    <string name="notification">通知！</string>
    <string name="custom_sound">カスタムサウンド通知！</string>
    <string name="custom_led">カスタムLED通知！</string>
    <string name="spinner">STYLE_SPINNER</string>
    <string name="horizontal">STYLE_HORIZONTAL</string>
    <string name="simple">一番シンプルな例</string>
    <string name="with_title">タイトル付き</string>
    <string name="two_buttons">2つボタン</string>
    <string name="three_buttons">3つボタン</string>
    <string name="select">選択ダイアログ</string>
    <string name="single_choice">ラジオボタン選択ダイアログ</string>
    <string name="multi_choice">チェックボックス選択ダイアログ</string>
    <string name="only_landscape">横画面固定中（理想は縦横両対応なのでこのレシピはよく検討してお使いください！）</string>
    <string name="alpha">Alpha</string>
    <string name="rotate">Rotate</string>
    <string name="scale">Scale</string>
    <string name="mix">Mix</string>
    <string name="translate">Translate</string>
    <string name="interpolator">Interpolator for Translate</string>
    <string name="footer_text">次の5件を読み込む</string>
    <string name="no_nine_patch">ただの画像の場合</string>
    <string name="nine_patch">9-patchの場合</string>
    <string name="composite">合成！</string>
    <string name="composite_and_save">合成してSDカードに保存！</string>
    <string name="pick_image">画像をギャラリーから選択！</string>
    <string name="pick_image_thumbnail">ギャラリーから選択してサムネイル表示！</string>
    <string name="sound_slow">うーんたーん</string>
    <string name="sound_normal">うんたん</string>
    <string name="sound_high">ｳﾝﾀﾝ</string>
    <string name="playing">BGM再生中・・・♪</string>
    <string name="recording_start">録音スタート</string>
    <string name="recording_stop">録音ストップ</string>
    <string name="play">再生！</string>
    <string name="now_playing">再生中</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pick_video">動画をギャラリーから選択！</string>
    <string name="pick_music">音楽を選択</string>
    <string name="start_camera">カメラを起動</string>
    <string name="capture">撮影</string>
    <string name="picture_size">撮影サイズ</string>
    <string name="auto_focus">AF</string>
    <string name="flash_mode">フラッシュモード</string>
    <string name="lets_shake">端末をシャカシャカ振ってシェイクしてください。</string>
    <string name="focus_mode">フォーカスモード</string>
    <string name="browser">ブラウザ</string>
    <string name="search">検索</string>
    <string name="tel">電話</string>
    <string name="map">Googleマップ</string>
    <string name="share">共有</string>
    <string name="image_share">画像を共有</string>
    <string name="url_share">URLを共有</string>
    <string name="recognize">音声認識</string>
    <string name="mail">メール</string>
    <string name="mail_attache">メール添付</string>
    <string name="show_log">ログを見ながら動かしてください</string>
    <string name="unzip">SDカードにassetsの.zipファイルを解凍します</string>
    <string name="twitter_auth">Twitter認証</string>
    <string name="tweet">つぶやく</string>
    <string name="create_pref">プリファレンスファイルを作る</string>
    <string name="backup_description">しばらくしてからアプリを再インストールして下のボタンでリストアできてるか確認してみてください。ただし、バックアップは非同期なのでタイミングは不定です。明示的に行う場合はbmgr runしてください。</string>
    <string name="can_restore">リストアできてる？</string>
    <string name="start_download">ダウンロード開始</string>
    <string name="go_setting">上の設定画面を呼んでみる</string>
    <string name="track">クリックを計測</string>
    <string name="category1">カテゴリの名前</string>
    <string name="checkbox_title">チェックボックス</string>
    <string name="checkbox_summary">チェックボックスサマリー</string>
    <string name="edittext_title">テキスト</string>
    <string name="edittext_summary">テキストサマリー</string>
    <string name="edittext_dialog_title">テキストダイアログ</string>
    <string name="list_title">リストタイトル</string>
    <string name="list_summary">リストサマリー</string>
    <string name="list_dialog_title">リストダイアログ</string>
    <string name="ringtone_title">リングトーンタイトル</string>
    <string name="ringtone_summary">リングトーンサマリー</string>
    <string-array name="list_entries">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
    </string-array>
    <string-array name="list_entryvalues">
        <item>first</item>
        <item>second</item>
        <item>third</item>
    </string-array>
    <string name="recipe_016_title">016 ボタンを使う</string>
    <string name="recipe_017_title">017 イメージボタンを使う</string>
    <string name="recipe_018_title">018 イメージビューを使う</string>
    <string name="recipe_019_title">019 テキストビューを使う</string>
    <string name="recipe_020_title">020 エディットテキストを使う</string>
    <string name="recipe_021_title">021 ラジオボタンを使う</string>
    <string name="recipe_022_title">022 チェックボックスを使う</string>
    <string name="recipe_023_title">023 スピナー（セレクトボックス）を使う</string>
    <string name="recipe_024_title">024 トグルボタンを使う</string>
    <string name="recipe_025_title">025 レイティングバーを使う</string>
    <string name="recipe_026_title">026 シークバーを使う</string>
    <string name="recipe_027_title">027 アナログ時計を使う</string>
    <string name="recipe_028_title">028 デジタル時計を使う</string>
    <string name="recipe_029_title">029 日付選択ダイアログボックスを使う</string>
    <string name="recipe_030_title">030 時間選択ダイアログボックスを使う</string>
    <string name="recipe_031_title">031 ウェブビューで指定したURLを表示する</string>
    <string name="recipe_032_title">032 ウェブビューで用意したHTMLを表示する</string>
    <string name="recipe_033_title">033 入力補完エディットテキストを使う</string>
    <string name="recipe_034_title">034 トーストを表示する</string>
    <string name="recipe_035_title">035 ノーティフィケーションを表示する</string>
    <string name="recipe_036_title">036 メニューを表示する</string>
    <string name="recipe_037_title">037 プログレスダイアログを表示する</string>
    <string name="recipe_038_title">038 確認ダイアログを表示する</string>
    <string name="recipe_039_title">039 選択ダイアログを表示する</string>
    <string name="recipe_040_title">040 画像の一覧をグリッドビューで表示する</string>
    <string name="recipe_041_title">041 カスタムビューをグリッドビューで表示する</string>
    <string name="recipe_042_title">042 スワイプで切り替わるビューを作成する</string>
    <string name="recipe_043_title">043 スワイプで切り替わるタブと処理を作成する</string>
    <string name="recipe_044_title">044 画面の回転をロックする</string>
    <string name="recipe_045_title">045 横画面用のレイアウトを用意する</string>
    <string name="recipe_046_title">046 ステータスバーを非表示にする</string>
    <string name="recipe_047_title">047 タイトルバーを非表示にする</string>
    <string name="recipe_048_title">048 アプリ起動時にスプラッシュ画像を表示する</string>
    <string name="recipe_049_title">049 ビューをアニメーションする</string>
    <string name="recipe_050_title">050 ListViewを表示する</string>
    <string name="recipe_051_title">051 表示内容をカスタマイズする</string>
    <string name="recipe_052_title">052 タップ、ロングタップを検知する</string>
    <string name="recipe_053_title">053 最後までスクロールしたことを検知する</string>
    <string name="recipe_054_title">054 次のX件を読み込む</string>
    <string name="recipe_056_title">056 画面が回転してもデータを保持する</string>
    <string name="recipe_057_title">057 アプリが終了してもデータを保持する</string>
    <string name="recipe_058_title">058 端末の解像度に合わせて画像を表示する</string>
    <string name="recipe_059_title">059 拡大されても綺麗な画像（9-patch）を使う</string>
    <string name="recipe_060_title">060 画像をリサイズする</string>
    <string name="recipe_061_title">061 画像を切り取る</string>
    <string name="recipe_062_title">062 画像を回転する</string>
    <string name="recipe_063_title">063 画像を合成する</string>
    <string name="recipe_064_title">064 画像をSDカードに保存する</string>
    <string name="recipe_065_title">065 ギャラリーから画像を選択する</string>
    <string name="recipe_066_title">066 サムネイルを取得する</string>
    <string name="recipe_067_title">067 JPEGファイルからExif情報を取得する</string>
    <string name="recipe_068_title">068 効果音を再生する</string>
    <string name="recipe_069_title">069 音声ファイルを再生する</string>
    <string name="recipe_070_title">070 マイクから録音する</string>
    <string name="recipe_071_title">071 動画を撮影する</string>
    <string name="recipe_072_title">072 動画を再生する</string>
    <string name="recipe_073_title">073 ビジュアライザで波形を表示する</string>
    <string name="recipe_074_title">074 イコライザで音を変化させる</string>
    <string name="recipe_075_title">075 カメラアプリで写真を撮影する</string>
    <string name="recipe_076_title">076 カメラのプレビュー映像を表示する</string>
    <string name="recipe_077_title">077 カメラのプレビュー映像にビューを重ねる</string>
    <string name="recipe_078_title">078 写真を撮影する</string>
    <string name="recipe_079_title">079 オートフォーカスを使う</string>
    <string name="recipe_080_title">080 フラッシュを使う</string>
    <string name="recipe_081_title">081 フォーカスモードを使う</string>
    <string name="recipe_082_title">082 フロントカメラを使う</string>
    <string name="recipe_083_title">083 加速度センサーを使う</string>
    <string name="recipe_084_title">084 近接センサーを使う</string>
    <string name="recipe_085_title">085 明るさセンサーを使う</string>
    <string name="recipe_086_title">086 端末の傾きを取得する</string>
    <string name="recipe_087_title">087 方位を取得する</string>
    <string name="recipe_088_title">088 位置情報を取得する</string>
    <string name="recipe_089_title">089 シェイクを検知する</string>
    <string name="recipe_090_title">090..095 インテント</string>
    <string name="recipe_101_title">101 検索結果をListViewに表示する</string>
    <string name="recipe_102_title">102 アプリケーションの終了を検知する</string>
    <string name="recipe_103_title">103 自動的にスリープしないようにする</string>
</resources>