<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/category1" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkbox_key"
            android:summary="@string/checkbox_summary"
            android:title="@string/checkbox_title" />

        <EditTextPreference
            android:defaultValue="Hello!"
            android:dialogTitle="@string/edittext_dialog_title"
            android:key="edittext_key"
            android:summary="@string/edittext_summary"
            android:title="@string/edittext_title" />

        <ListPreference
            android:defaultValue="third"
            android:dialogTitle="@string/list_dialog_title"
            android:entries="@array/list_entries"
            android:entryValues="@array/list_entryvalues"
            android:key="list_key"
            android:summary="@string/list_summary"
            android:title="@string/list_title" />

        <RingtonePreference
            android:key="ringtone_key"
            android:summary="@string/ringtone_summary"
            android:title="@string/ringtone_title" />
    </PreferenceCategory>

</PreferenceScreen>