<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onBrowserClick"
        android:text="@string/browser" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onSearchClick"
        android:text="@string/search" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onTelClick"
        android:text="@string/tel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onMapClick"
        android:text="@string/map" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onShareClick"
        android:text="@string/share" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onImageShareClick"
        android:text="@string/image_share" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onRecognizeClick"
        android:text="@string/recognize" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onMailClick"
        android:text="@string/mail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:onClick="onMailAttacheClick"
        android:text="@string/mail_attache" />

</LinearLayout>