<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<CheckBox
    android:id="@+id/check_box_a"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:checked="true"
    android:onClick="onCheckBoxClick"
    android:text="@string/check_box_a" />

    <CheckBox
        android:id="@+id/check_box_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxClick"
        android:text="@string/check_box_b" />

    <CheckBox
        android:id="@+id/check_box_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxClick"
        android:text="@string/check_box_c" />

</LinearLayout>